crates/core/src/plan/snapshots/gunk_core__plan__tests__reorder_commits.snap
---
source: crates/core/src/plan.rs
assertion_line: 958
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: E
    - Pick: D
    - Pick: C
    - Pick: B
    - Pick: A
  message_map: []
  author_map: []
