crates/core/src/plan/snapshots/gunk_core__plan__tests__root_commit_reword.snap
---
source: crates/core/src/plan/tests.rs
assertion_line: 1111
expression: result
---
Rebase:
  base: ~
  lines:
    - Reword: A
    - Pick: B
    - Pick: C
    - Pick: D
    - Pick: E
  message_map:
    - - A
      - Initial commit (reworded)
  author_map: []
