crates/core/src/plan/snapshots/gunk_core__plan__tests__single_commit_reword.snap
---
source: crates/core/src/plan/tests.rs
assertion_line: 679
expression: result
---
Rebase:
  base: ~
  lines:
    - Reword: A
  message_map:
    - - A
      - Reworded root
  author_map: []
