crates/core/src/plan/snapshots/gunk_core__plan__tests__squash_adjacent.snap
---
source: crates/core/src/plan/tests.rs
assertion_line: 894
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: A
    - Pick: B
    - Squash: C
    - Pick: D
    - Pick: E
  message_map: []
  author_map: []
