crates/core/src/plan/snapshots/gunk_core__plan__tests__squash_multiple_absorbed.snap
---
source: crates/core/src/plan.rs
assertion_line: 917
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: A
    - Pick: B
    - Squash: C
    - Squash: D
    - Pick: E
  message_map: []
  author_map: []
