crates/core/src/plan/snapshots/gunk_core__plan__tests__squash_non_adjacent_auto_reorder.snap
---
source: crates/core/src/plan.rs
assertion_line: 906
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: A
    - Pick: B
    - Squash: D
    - Pick: C
    - Pick: E
  message_map: []
  author_map: []
