crates/core/src/plan/snapshots/gunk_core__plan__tests__squash_plus_reword_keep.snap
---
source: crates/core/src/plan/tests.rs
assertion_line: 1015
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: A
    - Reword: B
    - Squash: C
    - Pick: D
    - Pick: E
  message_map:
    - - B
      - "Combined B+C\n\nSquashed commit"
  author_map: []
